# mssqlclient-ng

./: .gitignore  AGENTS.md  AI.md  CLAUDE.md  DEVELOPMENT.md  README.md  find_none_returns.py  pyproject.toml
.github/: copilot-instructions.md
mssqlclient_ng/: __init__.py  cli.py
mssqlclient_ng/src/: terminal.py
mssqlclient_ng/src/actions/: __init__.py  base.py  factory.py
mssqlclient_ng/src/actions/administration/: __init__.py  adsi.py  configure.py  createuser.py  kill.py  monitor.py  sessions.py  trustworthy.py
mssqlclient_ng/src/actions/database/: __init__.py  authtoken.py  dabases.py  databases.py  impersonate.py  info.py  loginmap.py  oledb_providers.py  permissions.py  procedures.py  rolemembers.py  roles.py  rows.py  search.py  tables.py  users.py  whoami.py  xprocs.py
mssqlclient_ng/src/actions/domain/: __init__.py  adgroups.py  admembers.py  adsid.py  domsid.py  groupmembers.py  rid_cycle.py  ridcycle.py
mssqlclient_ng/src/actions/execution/: __init__.py  agents.py  clr.py  exec_file.py  ole.py  query.py  xpcmd.py
mssqlclient_ng/src/actions/filesystem/: __init__.py  file_read.py  rm.py  tree.py  upload.py
mssqlclient_ng/src/actions/network/: __init__.py  adsiquery.py  linkmap.py  links.py  rpc.py  smb_coerce.py
mssqlclient_ng/src/actions/remote/: __init__.py  adsi_manager.py  linkmap.py  links.py
mssqlclient_ng/src/models/: __init__.py  linked_servers.py  server.py
mssqlclient_ng/src/services/: adsi.py  authentication.py  database.py  query.py  user.py
mssqlclient_ng/src/utils/: banner.py  common.py  formatter.py  helper.py  logbook.py  misc.py
mssqlclient_ng/src/utils/formatters/: __init__.py  base.py  formatter.py  markdown.py
mssqlclientng/: __main__.py  cli.py
mssqlclientng/src/: terminal.py
mssqlclientng/src/actions/: __init__.py  factory.py
mssqlclientng/src/actions/administration/: __init__.py  adsi.py  configure.py  createuser.py  kill.py  monitor.py  sessions.py
mssqlclientng/src/actions/database/: __init__.py  authtoken.py  dabases.py  impersonate.py  info.py  oledb_providers.py  permissions.py  procedures.py  rolemembers.py  rows.py  search.py  tables.py  users.py  whoami.py  xprocs.py
mssqlclientng/src/actions/domain/: __init__.py  domsid.py  groupmembers.py  rid_cycle.py
mssqlclientng/src/actions/execution/: __init__.py  agents.py  clr.py  exec_file.py  ole.py  powershell.py  query.py  remote_powershell.py  xpcmd.py
mssqlclientng/src/actions/filesystem/: __init__.py  file_read.py  rm.py  tree.py  upload.py
mssqlclientng/src/actions/network/: __init__.py  adsiquery.py  links.py  rpc.py  smb_coerce.py
mssqlclientng/src/models/: linked_servers.py  server.py
mssqlclientng/src/services/: adsi.py  authentication.py  configuration.py  database.py  ntlmrelay.py  query.py  user.py
mssqlclientng/src/utils/: banner.py  completions.py  formatter.py  helper.py  logbook.py  misc.py
src/mssqlclient_ng/: __init__.py  __main__.py  banner.py  cli.py
src/mssqlclient_ng/core/: terminal.py
src/mssqlclient_ng/core/actions/: __init__.py  base.py  factory.py
src/mssqlclient_ng/core/actions/administration/: __init__.py  audit.py  config.py  createuser.py  kill.py  monitor.py  requests.py  sessions.py  trustworthy.py
src/mssqlclient_ng/core/actions/agent/: __init__.py  job.py  job_exec.py  job_history.py  job_proxies.py  jobs.py
src/mssqlclient_ng/core/actions/configmgr/: __init__.py  cm_aad_apps.py  cm_accounts.py  cm_applications.py  cm_base.py  cm_collection.py  cm_collections.py  cm_deployment.py  cm_deployment_type.py  cm_deployment_types.py  cm_deployments.py  cm_device.py  cm_devices.py  cm_distribution_points.py  cm_health.py  cm_info.py  cm_log_trace.py  cm_package.py  cm_packages.py  cm_programs.py  cm_rbac_add.py  cm_script.py  cm_script_add.py  cm_script_delete.py  cm_script_run.py  cm_script_status.py  cm_scripts.py  cm_servers.py  cm_task_sequence.py  cm_task_sequences.py
src/mssqlclient_ng/core/models/: linked_servers.py  server.py  server_execution_state.py
src/mssqlclient_ng/core/services/: adsi.py  authentication.py  configmgr.py  configuration.py  database.py  ntlmrelay.py  query.py  user.py
src/mssqlclient_ng/core/utils/: common.py  completions.py  formatter.py  helper.py  logbook.py  storage.py
tests/: conftest.py  test_action_contract.py  test_action_factory.py  test_cli.py  test_configmgr_actions.py  test_formatters.py  test_relay.py  test_server_parsing.py  test_terminal.py  test_utils.py
(+65 files in other folders)
