[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "mssqlclientng"
version = "0.9.1"
description = "Enhanced version of impacket's mssqlclient.py. It lets you interact with Microsoft SQL Server (MS SQL / MSSQL) servers and their linked instances, impersonating any account encountered along the way, without requiring complex T-SQL queries."
authors = [
    {name = "n3rada",email = "72791564+n3rada@users.noreply.github.com"}
]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "impacket[tds] (>=0.13.0,<0.14.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "prompt-toolkit (>=3.0.52,<4.0.0)",
    "pygments (>=2.19.2,<3.0.0)"
]

[project.urls]
repository  = "https://github.com/n3rada/mssqlclient-ng"

[project.scripts]
mssqlclient-ng = 'mssqlclientng.cli:main'
mssqlclientng = 'mssqlclientng.cli:main'
