[build-system]
requires = ["uv_build>=0.11.8,<0.12"]
build-backend = "uv_build"

[project]
name = "mssqlclient-ng"
version = "0.9.1"
description = "Enhanced version of impacket's mssqlclient.py. It lets you interact with Microsoft SQL Server (MS SQL / MSSQL) servers and their linked instances, impersonating any account encountered along the way, without requiring complex T-SQL queries."
authors = [
    {name = "n3rada",email = "72791564+n3rada@users.noreply.github.com"}
]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "impacket>=0.13.1",
    "loguru>=0.7.3",
    "prompt-toolkit>=3.0.52",
    "pygments>=2.19.2",
]

[project.urls]
repository  = "https://github.com/n3rada/mssqlclient-ng"
homepage = "https://github.com/n3rada/mssqlclient-ng"
documentation = "https://github.com/n3rada/mssqlclient-ng/blob/main/README.md"

[project.scripts]
mssqlclient-ng = 'mssqlclient_ng.cli:main'

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.uv.sources]
impacket = { git = "https://github.com/fortra/impacket.git", rev = "master" }
